--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"@types/react-dom": "18.0.11",
 		"eslint": "8.36.0",
 		"eslint-config-next": "13.2.4",
+		"eslint-config-prettier": "8.8.0",
+		"install": "0.13.0",
+		"npm": "9.6.2",
 		"nvm-guard": "1.0.4",
 		"postcss-custom-media": "9.1.2",
 		"postcss-flexbugs-fixes": "5.0.2",
