--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "nextjs-starter",
   "version": "1.0.0",
   "scripts": {
+    "prepare": "husky install",
     "dev": "nvm-guard && next dev",
     "build": "nvm-guard && next build",
     "start": "nvm-guard && next start",
     "lint": "nvm-guard && next lint",
     "stylelint": "nvm-guard && stylelint 'src/**/*.css'",
     "prettier": "nvm-guard && prettier --check 'src/**/*.{ts,tsx,js,jsx}'",
-    "prepare": "husky install",
-    "type-check": "nvm-guard && tsc"
+    "type-check": "nvm-guard && tsc",
+    "test": "nvm-guard && jest --passWithNoTests"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -28,6 +29,8 @@
   "devDependencies": {
     "@commitlint/cli": "17.5.0",
     "@commitlint/config-conventional": "17.4.4",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -37,6 +40,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "husky": "8.0.3",
     "install": "0.13.0",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "lint-staged": "13.2.0",
     "npm": "9.6.2",
     "nvm-guard": "1.0.4",
